--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>spring-boot-logback</module>
+        <module>spring-boot-netty</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -21,6 +22,7 @@
         <hutool.version>4.6.2</hutool.version>
         <guava.version>28.0-jre</guava.version>
         <user.agent.version> 1.21</user.agent.version>
+
     </properties>
 
     <dependencyManagement>
@@ -55,6 +57,9 @@
                 <artifactId>UserAgentUtils</artifactId>
                 <version>${user.agent.version}</version>
             </dependency>
+
+
+
 
         </dependencies>
     </dependencyManagement>
