--- a/spring-boot-netty/pom.xml
+++ b/spring-boot-netty/pom.xml
@@ -42,6 +42,13 @@
             <artifactId>lombok</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.2</version>
+        </dependency>
+
+
     </dependencies>
 
 
