--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
         <hutool.version>4.6.2</hutool.version>
         <guava.version>28.0-jre</guava.version>
         <user.agent.version> 1.21</user.agent.version>
-
+        <fastjson.version>1.2.62</fastjson.version>
     </properties>
 
     <dependencyManagement>
@@ -56,6 +56,12 @@
                 <groupId>eu.bitwalker</groupId>
                 <artifactId>UserAgentUtils</artifactId>
                 <version>${user.agent.version}</version>
+            </dependency>
+            <!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>fastjson</artifactId>
+                <version>${fastjson.version}</version>
             </dependency>
 
 
