--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <modules>
         <module>spring-boot-logback</module>
         <module>spring-boot-netty</module>
+        <module>spark-demo01</module>
     </modules>
     <packaging>pom</packaging>
 
