--- a/threadPool/pom.xml
+++ b/threadPool/pom.xml
@@ -9,10 +9,29 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>spark-demo01</artifactId>
-
+    <artifactId>threadPool</artifactId>
 
     <dependencies>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+        </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.apache.spark/spark-launcher -->
         <dependency>
@@ -54,5 +73,6 @@
             </plugin>
         </plugins>
     </build>
+
 
 </project>
