--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
         <module>es</module>
         <module>boot-admin-server</module>
         <module>tool</module>
+        <module>file-upload</module>
+        <module>oldwei-common</module>
     </modules>
     <packaging>pom</packaging>
 
