--- a/file-upload/pom.xml
+++ b/file-upload/pom.xml
@@ -12,6 +12,13 @@
     <artifactId>file-upload</artifactId>
 
     <dependencies>
+
+        <dependency>
+            <groupId>top.oldwei</groupId>
+            <artifactId>oldwei-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
